--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang='RU'>
 <head>
 	 
@@ -25,7 +25,7 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 <!-- Begin Verbox {literal} -->
-<script type='text/javascript'>
+<!--script type='text/javascript'>
 	(function(d, w, m) {
 		window.supportAPIMethod = m;
 		var s = d.createElement('script');
@@ -38,7 +38,7 @@
 		if (sc) sc.parentNode.insertBefore(s, sc); 
 		else d.documentElement.firstChild.appendChild(s);
 	})(document, window, 'Verbox');
-</script>
+</script-->
 <!-- {/literal} End Verbox -->
 </head>
 <body>
