feat: added jivosite in all pages

--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang='RU'>
 <head>
 	 
@@ -24,22 +24,11 @@
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-<!-- Begin Verbox {literal} -->
+<!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
-	(function(d, w, m) {
-		window.supportAPIMethod = m;
-		var s = d.createElement('script');
-		s.type ='text/javascript'; s.id = 'supportScript'; s.charset = 'utf-8';
-		s.async = true;
-		var id = '969270be34ed604dd07687682d7eb05b';
-		s.src = '//admin.verbox.ru/support/support.js?h='+id;
-		var sc = d.getElementsByTagName('script')[0];
-		w[m] = w[m] || function() { (w[m].q = w[m].q || []).push(arguments); };
-		if (sc) sc.parentNode.insertBefore(s, sc); 
-		else d.documentElement.firstChild.appendChild(s);
-	})(document, window, 'Verbox');
+(function(){ var widget_id = 'DW3ev3eT7u';var d=document;var w=window;function l(){var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
 </script>
-<!-- {/literal} End Verbox -->
+<!-- {/literal} END JIVOSITE CODE -->
 </head>
 <body>
 	<div id="wrapper">
