--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <!-- {/literal} End Verbox -->
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
-<!--script type='text/javascript'>
-(function(){ var widget_id = 'MgjEN3W658';var d=document;var w=window;function l(){var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-</script-->
+<script type='text/javascript'>
+(function(){ var widget_id = 'DW3ev3eT7u';var d=document;var w=window;function l(){var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+</script>
 <!-- {/literal} END JIVOSITE CODE -->
 
 <!-- BEGIN QUICKCHAT CODE -->
-<script type='text/javascript'>(function(){var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://quickchat.pro/script/widget?w=ea01b635ca'; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);})();</script>
+<!--script type='text/javascript'>(function(){var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://quickchat.pro/script/widget?w=ea01b635ca'; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);})();</script-->
 <!-- END QUICKCHAT CODE -->
 
 </head>
