feat: added jivosite in all pages

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 			<p>
 				<i class="fas fa-phone-volume"></i> 8 (995) 904-09-45 <br>
 				<i class="far fa-envelope-open"></i> support@daaspro.ru <br>
-				<i class="fab fa-telegram-plane" ></i> @
+				<i class="fab fa-telegram-plane" ></i> t.me/daaspro
 			</p>
 		</div>
 	</div>
