--- a/pricing.html
+++ b/pricing.html
@@ -190,7 +190,7 @@
 							<div class="contact-container col-md-6">
 								<ul>
 									<li><i class="fas fa-phone-volume"></i> 8 995 904-09-45</li>
-									<li><i class="fab fa-telegram-plane" ></i>  @</li>
+									<li><i class="fab fa-telegram-plane" ></i>  t.me/daaspro</li>
 									<li><i class="far fa-envelope-open"></i> support@daaspro.ru</li>
 									<li> <i class="far fa-comments"></i> живой чат на нашем сайте</li>
 								</ul>
@@ -216,7 +216,7 @@
 			<p>
 				<i class="fas fa-phone-volume"></i> 8 (995) 904-09-45 <br>
 				<i class="far fa-envelope-open"></i> support@daaspro.ru <br>
-				<i class="fab fa-telegram-plane" ></i> @
+				<i class="fab fa-telegram-plane" ></i> t.me/daaspro
 			</p>
 		</div>
 	</div>
