--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
 				JC Main Road, Near Silnile tower<br>
 			Pin-21542 NewYork US.</address-->
 			<p>
-				<i class="fas fa-phone-volume"></i> 8 (995) 904-09-45 <br>
-				<i class="far fa-envelope-open"></i> support@daaspro.ru <br>
-				<i class="fab fa-telegram-plane" ></i> t.me/daaspro
+				<i class="fas fa-phone-volume"></i> <a href="tel: 8 (995) 904-09-45"> 8 (995) 904-09-45 </a><br>
+				<i class="far fa-envelope-open"></i> <a href="mailto:support@daaspro.ru"> support@daaspro.ru </a><br>
+				<i class="fab fa-telegram-plane" ></i> <a href="https://t.me/daaspro"> @daaspro</a>
 			</p>
 		</div>
 	</div>
@@ -256,7 +256,6 @@
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/animate.js"></script>
 	<script src="js/custom.js"></script>
-	<script src="js/owl-carousel/owl.carousel.js"></script>
 	<script>
 		$(document).ready(function() {
 //carousel options
