--- a/pricing.html
+++ b/pricing.html
@@ -82,7 +82,7 @@
 					<div class="col-md-12">
 						<div class="about-logo">
 							<h3>Наши лучшие цены</h3>
-							<p>ВИРТУАЛЬНОЕ РАБОЧЕЕ МЕСТО (DAAS) — БЫСТРЫЙ И УДОБНЫЙ СПОСОБ ОРГАНИЗОВАТЬ ПОЛНОЦЕННЫЕ НЕДОРОГИЕ МОБИЛЬНЫЕ РАБОЧИЕ МЕСТА ДЛЯ ВАШИХ СОТРУДНИКОВ С ПРИВЫЧНЫМ ИНТЕРФЕЙСОМ И ПРОГРАММНЫМИ ПРОДУКТАМИ MICROSOFT OFFICE.</p>
+							<p>Виртуальное рабочее место (daas) — быстрый и удобный способ организовать полноценные недорогие мобильные рабочие места для ваших сотрудников с привычным интерфейсом и программными продуктами microsoft office.</p>
 							<p>DaaS позволяет достигать значительной экономии за счет более дешевых клиентских устройств и предоставления программного обеспечения Microsoft в аренду. DaaS позволяет значительно упростить администрирование клиентских рабочих мест и повысить информационную безопасность.</p>
 							<h3><p>Мы работаем на собственном оборудовании – размещенном в Европе.</p></h3>
 							<h3><p>
@@ -186,12 +186,12 @@
 						<div class="contact-us">
 
 							<h3>Заказ услуги </h3>
-							<p>ЧТО БЫ ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ И ЗАКАЗАТЬ УСЛУГУ ВЫ МОЖЕТЕ СВЯЗАТЬСЯ С НАШИМИ СПЕЦИАЛИСТАМИ ПО</p>
+							<p>что бы получить консультацию и заказать услугу вы можете связаться с нашими специалистами по</p>
 							<div class="contact-container col-md-6">
 								<ul>
-									<li><i class="fas fa-phone-volume"></i> 8 995 904-09-45</li>
-									<li><i class="fab fa-telegram-plane" ></i>  t.me/daaspro</li>
-									<li><i class="far fa-envelope-open"></i> support@daaspro.ru</li>
+									<li><i class="fas fa-phone-volume"></i> <a href="tel: 8 (995) 904-09-45"> 8 (995) 904-09-45 </a></li>
+									<li><i class="fab fa-telegram-plane" ></i> <a href="https://t.me/daaspro"> @daaspro</a></li>
+									<li><i class="far fa-envelope-open"></i> <a href="mailto:support@daaspro.ru"> support@daaspro.ru </a></li>
 									<li> <i class="far fa-comments"></i> живой чат на нашем сайте</li>
 								</ul>
 							</div>
@@ -214,9 +214,9 @@
 				JC Main Road, Near Silnile tower<br>
 			Pin-21542 NewYork US.</address-->
 			<p>
-				<i class="fas fa-phone-volume"></i> 8 (995) 904-09-45 <br>
-				<i class="far fa-envelope-open"></i> support@daaspro.ru <br>
-				<i class="fab fa-telegram-plane" ></i> t.me/daaspro
+				<i class="fas fa-phone-volume"></i> <a href="tel: 8 (995) 904-09-45"> 8 (995) 904-09-45 </a><br>
+				<i class="far fa-envelope-open"></i> <a href="mailto:support@daaspro.ru"> support@daaspro.ru </a><br>
+				<i class="fab fa-telegram-plane" ></i> <a href="https://t.me/daaspro"> @daaspro</a>
 			</p>
 		</div>
 	</div>
