--- a/services.html
+++ b/services.html
@@ -189,11 +189,11 @@
                 <strong>InLine company Inc</strong><br>
                 JC Main Road, Near Silnile tower<br>
             Pin-21542 NewYork US.</address-->
-            <p>
-             <i class="fas fa-phone-volume"></i> 8 (995) 904-09-45 <br>
-             <i class="far fa-envelope-open"></i> support@daaspro.ru <br>
-             <i class="fab fa-telegram-plane" ></i> t.me/daaspro
-         </p>
+           <p>
+                <i class="fas fa-phone-volume"></i> <a href="tel: 8 (995) 904-09-45"> 8 (995) 904-09-45 </a><br>
+                <i class="far fa-envelope-open"></i> <a href="mailto:support@daaspro.ru"> support@daaspro.ru </a><br>
+                <i class="fab fa-telegram-plane" ></i> <a href="https://t.me/daaspro"> @daaspro</a>
+            </p>
      </div>
  </div>
 
