fixed: url for contacts

--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
 				</div>
 				<div class="row">
 					<div class="skill-home"> <div class="skill-home-solid clearfix"> 
-						<div class="col-md-4 text-center"> 
+						<div class="col-md-4 text-center well"> 
 							<div class="box-content"> 
 								<span class="icons c1"><i class="icon-layers"></i></span> <div class="box-area">
 									<h3>Масштабируемость</h3> <p>Возможность оперативно менять конфигурацию, используемого оборудования, избежав временных и финансовых издержек на конфигурацию собственных компьютерных мощностей и сервисный персонал.</p></div></div>
 								</div>
-								<div class="col-md-4 text-center"> 
+								<div class="col-md-4 text-center well"> 
 									<div class="box-content focus"> 
 										<span class="icons c2"><i class="icon-gears"></i></span> <div class="box-area">
 											<h3>Отказоустойчивость</h3> <p>Высокий уровень сервиса технической поддержки, профессиональное серверное оборудование, надежные дата центры с развитой инфраструктурой, значительный запас емкости ИБП позволяют обеспечить высокий уровень SLA.</p></div></div>
 										</div>
-										<div class="col-md-4 text-center">  
+										<div class="col-md-4 text-center well">  
 											<div class="box-content">
 												<span class="icons c3"><i class="icon-shield"></i></span> <div class="box-area">
 													<h3>Безопасность</h3> <p>Сетевая защита, разграничение прав доступа, услуга резервного копирования данных обеспечивают самый высокий уровень безопасности, как со стороны злоумышленников, так и со стороны ошибочных действий пользователей.</p></div>
