add: files for SEO

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!--[if lte IE 7]><script src="lte-ie7.js"></script><![endif]-->
 	<link href="css/style.css" rel="stylesheet" />
 
-	
+	<meta name="yandex-verification" content="10e97c4dcd2dea77" />
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
