add: files for SEO

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link href="css/style.css" rel="stylesheet" />
 
 	<meta name="yandex-verification" content="10e97c4dcd2dea77" />
+	<meta name="google-site-verification" content="ZTLewgTatquBOvqlNT97SGUcDN6TAoWRZP_EIUZ24lU" />
 
 <!-- BEGIN JIVOSITE CODE {literal} -->
 <script type='text/javascript'>
