--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang='RU'>
 <head>
-	 
+	 <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134244517-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134244517-1');
+</script>
 	<title>Виртуальный рабочий стол</title>
 	<meta name="keywords"
 	content="daas, заказать виртуальный рабочий стол, виртуальный сервер, хостинг">
