--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<title>Виртуальный рабочий стол и Выделенный сервер</title>
 	<meta name="keywords"
 	content="daas, заказать виртуальный рабочий стол, виртуальный офис, выделенный сервер">
-	<meta name="description" content="Услуга Виртуальный Офис в которую входит Выделенный сервер, Виртуальный рабочий стол, Резервирование данных, в дата-центре, расположенном в Европе, позволит сократить Ваши расходы на IT инфраструктуру компании, автоматизировать процессы и обезопасить данные от несанкционированного доступа.">
+	<meta name="description" content="Услуга Виртуальный Офис в которую входит Выделенный сервер, Виртуальный рабочий стол, Резервирование данных.
+	Бесплатный Тестовый Период.
+	Дата-центр, расположенный в Европе, позволит сократить Ваши расходы на IT инфраструктуру компании, автоматизировать процессы и обезопасить данные от несанкционированного доступа.">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="canonical" href="https://daaspro.ru"/>
